client/src/components/styles.css
/* ... */
.toggle-li {
	z-index: 3;
	text-align: center;
	border: 1px solid #dadada;
	height: 7vh;
	line-height: 7vh;
	font-size: 1.5em;
}
.toggle-li:first-child {
	border-radius: 0 15px 0 0;
}
.toggle-li:last-child {
	border-radius: 0 0 15px 0;
}

.toggle-li:hover {
	cursor: pointer;
}
.toggleClosePulloutDiv {
	position: absolute;
	width: 110vw;
	height: 100vh;
	z-index: 1;
	top: -1vh;
}

/**************Nav Bar***************/

.mainNavBar {
	height: 5vh;
	width: 100vw;
	display: flex;
	justify-content: space-around;
	background-color: #ffd200;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.mainBtn {
	height: 100%;
	width: 20%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.mainBtnImg {
	height: 35px;
	padding-top: 4px;
}

.dropDownBtn {
	height: 100%;
	width: 100%;
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
}

.dropDownBtn img {
	height: 85%;
}

.mainTsLogo {
	height: 100%;
	width: 60%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.mainNavLogo {
	height: 65%;
}

.burgerMenuContainer,
.burgerMenu {
	height: 100%;
	width: 20%;
	display: flex;
	justify-content: center;
	align-items: center;
}

/***********Drop Down Arrow**************/

/* .topLeftArrow {
	height: 50%;
	transform: rotate(120deg) translate(-1px, 7px);
	background-color: #1171bb;
	padding: 2px;
}

.topRightArrow {
	height: 50%;
	transform: rotate(-120deg) translate(1px, 7px);
	background-color: #1171bb;
	padding: 2px;
}

.bottomLeftArrow {
	height: 50%;
	transform: rotate(120deg) translate(11px, 10px);
	background-color: #1171bb;
	padding: 2px;
}

.bottomRightArrow {
	height: 50%;
	transform: rotate(-120deg) translate(-3px, -4px);
	background-color: #1171bb;
	padding: 2px;
} */

/***********Login***************/

.loginContainer {
	height: 100vh;
	width: 100vw;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: column wrap;
}

.loginLogoContent {
	height: 50%;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 0;
	padding-top: 40%;
}

.loginTeamLogo {
	width: 45%;
}

.loginButtonContent {
	height: 50%;
	width: 100%;
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: column wrap;
	padding-bottom: 16%;
}

.loginButtons {
	height: 14%;
	width: 24%;
	margin: 17px;
	border-radius: 8px;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #1171bb;
	color: white;
	text-decoration: none;
	font-size: 17px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.loginButtons:hover {
	background-color: #dadada;
	color: #000000;
}

.desktopText {
	display: none;
}

@media only screen and (min-width: 425px) {
	.loginTeamLogo {
		width: 25%;
	}

	.loginLogoContent {
		padding-top: 20%;
	}

	.loginButtonContent {
		padding-bottom: 0;
	}

	.loginButtons {
		display: none;
	}

	.desktopText {
		display: block;
		color: black;
		font-size: 30px;
		text-align: center;
	}
}

/********User Profile**********/
.profileContainer {
	height: 100vh;
	width: 100vw;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: column wrap;
}

.profile {
	width: 100%;
	margin: 0;
}

.profileTitleContent {
	height: 10%;
	position: relative;
	background-color: #dadada;
	border-radius: 5px;
	display: flex;
	justify-content: center;
	align-items: center;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.profileTitleHeader {
	position: absolute;
	font-size: 38px;
	font-weight: bold;
}

.profilePic {
	height: 30%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.athPic {
	margin: 0;
	height: 80%;
}

.profileInfo {
	height: 50%;
	display: flex;
	flex-flow: column wrap;
}

.profileName {
	height: 10%;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #1171bb;
	border-radius: 2px;
}

.athleteName {
	font-size: 1.85em;
	color: white;
}

.profileBio {
	height: 30%;
	width: 100%;
	display: flex;
	flex-flow: column wrap;
}

.bioTitleContainer {
	height: 30%;
	width: 100%;
	background-color: #dadada;
	border-radius: 5px;
	position: relative;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.profileBioTitle {
	font-weight: bold;
	font-size: 1.62em;
	position: absolute;
	left: 5px;
	top: 3px;
}

.profileBioInfo {
	height: 70%;
	width: 100%;
	padding: 10px;
	font-size: 1.5em;
	overflow: auto;
}

.profileStats {
	height: 60%;
	width: 100%;
	display: flex;
	flex-flow: column wrap;
	overflow: auto;
}

.statsTitleContainer {
	height: 15%;
	width: 100%;
	background-color: #dadada;
	border-radius: 5px;
	position: relative;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.profileStatsTitle {
	font-weight: bold;
	font-size: 1.62em;
	position: absolute;
	left: 5px;
	top: 3px;
}

.statsContained {
	height: 85%;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: column wrap;
	overflow: auto;
}

.profileStatsInfo {
	height: 23%;
	width: 100%;
	padding: 10px;
	font-size: 1.5em;
}

.profileFooter {
	height: 5%;
	width: 100%;
	position: relative;
}

.profileEdit {
	position: absolute;
	padding: 12px;
	left: 50%;
	border-radius: 7px;
	bottom: 40%;
	background-color: #1171bb;
	color: white;
	transform: translate(-50%, 0);
	text-decoration: none;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.profileEdit:hover {
	background-color: #dadada;
	color: #000000;
}

/**********fork Nav************/
.forkContainer {
	height: 100vh;
	width: 100vw;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: column wrap;
}

.forkButtonContent {
	height: 95%;
	width: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: column wrap;
}
/* ... */

